Mon Aug 18 10:35:25 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (io_enc_str_converted): new function.
	  (make_readconv): extracted from io_getc.
	  (more_char): ditto.
	  (appendline): use econv via make_readconv and more_char for code
	  conversion.
	  (prepare_getline_args): don't convert record separator.
	  (rb_io_getline_1): don't use rb_io_getline_fast if enc2 is set.
	  (io_getc): use make_readconv and more_char.

Mon Aug 18 08:27:44 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* common.mk: fix error in uncommon.mk.

Mon Aug 18 06:10:08 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk: config.h depends config.status.

Mon Aug 18 03:59:43 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (appendline): appendline cannot check character boundary.
	  (rb_io_getline_1): relax limit until character boundary.

Mon Aug 18 02:25:11 2008  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cgi.rb (WEBrick::CGI::Socket#eof?): added lacked method.

Sun Aug 17 21:50:22 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (prepare_getline_args): io.gets(10,nil) should cause TypeError.

Sun Aug 17 15:58:39 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb: not check config.h.

	* lib/mkmf.rb (init_mkmf): add include/ruby/backward to $INCFLAGS.

	* include/ruby/backward/{st,util}.h: added for backward compatibility.
	  [ruby-dev:35811]

Sun Aug 17 13:40:04 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (econv_primitive_putback): new method.

Sun Aug 17 13:23:53 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h (rb_econv_putbackable): declared.
	  (rb_econv_putback): ditto.

	* transcode.c (rb_econv_putbackable): implemented.
	  (rb_econv_putback): ditto.

	* io.c (io_getc): put back bytes if possible.

Sun Aug 17 12:00:18 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (make_econv_exception): add several instance variables
	  to exception object.
	  (ecerr_source_encoding): new method:
	  Encoding::ConversionUndefined#source_encoding and 