@@ -1,3 +1,10 @@
+Mon Aug 18 12:12:29 2008  Tanaka Akira  <akr@fsij.org>
+
+	* io.c (io_shift_crbuf): add strp argument to append into existing
+	  string.
+	  (read_all): use econv if enc2 is set.
+	  (io_getc): follow the io_shift_crbuf change.
+
 Mon Aug 18 10:35:25 2008  Tanaka Akira  <akr@fsij.org>
 
 	* io.c (io_enc_str_converted): new function.
